--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li class="benefits-list-item">
               <div class="benefits-icon">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle">Strategy</h3>
@@ -80,7 +80,7 @@
             <li class="benefits-list-item">
               <div class="benefits-icon">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle">Punctuality</h3>
@@ -92,7 +92,7 @@
             <li class="benefits-list-item">
               <div class="benefits-icon">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle">Diligence</h3>
@@ -104,7 +104,7 @@
             <li class="benefits-list-item">
               <div class="benefits-icon">
                 <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle">Technologies</h3>
@@ -134,22 +134,22 @@
                 <ul class="social-networks">
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-instagram" ></use>
+                      <use href="./images/icons.svg#icon-instagram" ></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg></a>
                   </li>
                 </ul>
@@ -168,22 +168,22 @@
                 <ul class="social-networks">
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-instagram" ></use>
+                      <use href="./images/icons.svg#icon-instagram" ></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg></a>
                   </li>
                 </ul>
@@ -202,22 +202,22 @@
                 <ul class="social-networks">
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-instagram" ></use>
+                      <use href="./images/icons.svg#icon-instagram" ></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg></a>
                   </li>
                 </ul>
@@ -236,22 +236,22 @@
                 <ul class="social-networks">
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-instagram" ></use>
+                      <use href="./images/icons.svg#icon-instagram" ></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg></a>
                   </li>
                   <li class="social-networks-item">
                     <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg></a>
                   </li>
                 </ul>
