--- a/index.html
+++ b/index.html
@@ -265,12 +265,12 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <div class="portfolio-descr"><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p><img
+              <div class="portfolio-descr"><img
                 src="./images/banking_app.jpg"
                 alt="banking app"
                 width="360"
                 class="portfolio-img"
-              /></div>
+              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
