--- a/index.html
+++ b/index.html
@@ -277,60 +277,60 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
+              <div class="portfolio-descr"><img
                 src="./images/cashless_payment.jpg"
                 alt="cashless payment"
                 width="360"
                 class="portfolio-img"
-              />
+              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
+              <div><img
                 src="./images/meditation_app.jpg"
                 alt="meditationapp"
                 width="360"
                 class="portfolio-img"
-              />
+              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
+              <div><img
                 src="./images/taxi_service.jpg"
                 alt="taxi service"
                 width="360"
                 class="portfolio-img"
-              />
+              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
+              <div><img
                 src="./images/screen_illustrations.jpg"
                 alt="screen illustrations"
                 width="360"
                 class="portfolio-img"
-              />
+              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
+              <div><img
                 src="./images/online_courses.jpg"
                 alt="online courses"
                 width="360"
                 class="portfolio-img"
-              />
+              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
