--- a/index.html
+++ b/index.html
@@ -133,24 +133,30 @@
                 <p class="team-item-text">Product Designer</p>
                 <ul class="social-networks">
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-instagram" ></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg>
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -167,24 +173,30 @@
                 <p class="team-item-text">Frontend Developer</p>
                 <ul class="social-networks">
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-instagram" ></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg>
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -201,24 +213,30 @@
                 <p class="team-item-text">Marketing</p>
                 <ul class="social-networks">
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-instagram" ></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg>
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -235,24 +253,30 @@
                 <p class="team-item-text">UI Designer</p>
                 <ul class="social-networks">
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-instagram" ></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg>
+                    ></a>
                   </li>
                   <li class="social-networks-item">
-                    <a href="" class="social-networks-link"><svg width="16" height="16" class="social-networks-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg></a>
+                    <a href="" class="social-networks-link"
+                      ><svg width="16" height="16" class="social-networks-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg>
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -265,72 +289,114 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <div class="portfolio-descr"><img
-                src="./images/banking_app.jpg"
-                alt="banking app"
-                width="360"
-                class="portfolio-img"
-              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <div class="portfolio-descr">
+                <img
+                  src="./images/banking_app.jpg"
+                  alt="banking app"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <p class="descr-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div class="portfolio-descr"><img
-                src="./images/cashless_payment.jpg"
-                alt="cashless payment"
-                width="360"
-                class="portfolio-img"
-              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <div class="portfolio-descr">
+                <img
+                  src="./images/cashless_payment.jpg"
+                  alt="cashless payment"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <p class="descr-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div><img
-                src="./images/meditation_app.jpg"
-                alt="meditationapp"
-                width="360"
-                class="portfolio-img"
-              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <div>
+                <img
+                  src="./images/meditation_app.jpg"
+                  alt="meditationapp"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <p class="descr-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div><img
-                src="./images/taxi_service.jpg"
-                alt="taxi service"
-                width="360"
-                class="portfolio-img"
-              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <div>
+                <img
+                  src="./images/taxi_service.jpg"
+                  alt="taxi service"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <p class="descr-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div><img
-                src="./images/screen_illustrations.jpg"
-                alt="screen illustrations"
-                width="360"
-                class="portfolio-img"
-              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <div>
+                <img
+                  src="./images/screen_illustrations.jpg"
+                  alt="screen illustrations"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <p class="descr-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div><img
-                src="./images/online_courses.jpg"
-                alt="online courses"
-                width="360"
-                class="portfolio-img"
-              /><p class="descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <div>
+                <img
+                  src="./images/online_courses.jpg"
+                  alt="online courses"
+                  width="360"
+                  class="portfolio-img"
+                />
+                <p class="descr-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
@@ -341,7 +407,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a href="./index.html" class="footer-logo"
           >Web<span class="footer-logo-white">Studio</span></a
         >
