--- a/index.html
+++ b/index.html
@@ -323,12 +323,12 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
+              <div class="app-descr"><img
                 src="./images/meditation_app.jpg"
                 alt="meditationapp"
                 width="360"
                 class="portfolio-img"
-              />
+              /><p class="app-descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
 
               <div class="app">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
@@ -336,12 +336,12 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
+              <div><img
                 src="./images/taxi_service.jpg"
                 alt="taxi service"
                 width="360"
                 class="portfolio-img"
-              />
+              /><p class="app-descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
 
               <div class="app">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
@@ -349,12 +349,12 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
+              <div class="app-descr"><img
                 src="./images/screen_illustrations.jpg"
                 alt="screen illustrations"
                 width="360"
                 class="portfolio-img"
-              />
+              /><p class="app-descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
 
               <div class="app">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
@@ -362,12 +362,12 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
+              <div class="app-descr"><img
                 src="./images/online_courses.jpg"
                 alt="online courses"
                 width="360"
                 class="portfolio-img"
-              />
+              /><p class="app-descr-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
 
               <div class="app">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
