--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <div><img
+              <div class="app-descr"><img
                 src="./images/taxi_service.jpg"
                 alt="taxi service"
                 width="360"
@@ -380,13 +380,46 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <a href="./index.html" class="footer-logo"
+        <div class="footer-info"><a href="./index.html" class="footer-logo"
           >Web<span class="footer-logo-white">Studio</span></a
         >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
-        </p>
+        </p></div>
+        <div class="footer-social-networks">
+          <p class="social-media">Social media</p>
+          <ul class="social-networks">
+            <li class="social-networks-item">
+              <a href="" class="social-networks-link"
+                ><svg width="16" height="16" class="social-networks-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-networks-item">
+              <a href="" class="social-networks-link"
+                ><svg width="16" height="16" class="social-networks-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-networks-item">
+              <a href="" class="social-networks-link"
+                ><svg width="16" height="16" class="social-networks-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-networks-item">
+              <a href="" class="social-networks-link"
+                ><svg width="16" height="16" class="social-networks-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
