--- a/index.html
+++ b/index.html
@@ -389,31 +389,31 @@
         </p></div>
         <div class="footer-social-networks">
           <p class="social-media">Social media</p>
-          <ul class="social-networks">
-            <li class="social-networks-item">
-              <a href="" class="social-networks-link"
-                ><svg width="16" height="16" class="social-networks-icon">
+          <ul class="footer-social-media">
+            <li class="social-media-item">
+              <a href="" class="social-media-link"
+                ><svg width="24" height="24" class="social-networks-icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-networks-item">
-              <a href="" class="social-networks-link"
-                ><svg width="16" height="16" class="social-networks-icon">
+            <li class="social-media-item">
+              <a href="" class="social-media-link"
+                ><svg width="24" height="24" class="social-networks-icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-networks-item">
-              <a href="" class="social-networks-link"
-                ><svg width="16" height="16" class="social-networks-icon">
+            <li class="social-media-item">
+              <a href="" class="social-media-link"
+                ><svg width="24" height="24" class="social-networks-icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-networks-item">
-              <a href="" class="social-networks-link"
-                ><svg width="16" height="16" class="social-networks-icon">
+            <li class="social-media-item">
+              <a href="" class="social-media-link"
+                ><svg width="24" height="24" class="social-networks-icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
